--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -1,5 +1,5 @@
 ---
-import PortfolioPageLayout from "@/layouts/PortfolioPageLayout.astro";
+import PortfolioListLayout from "@/layouts/PortfolioListLayout.astro";
 ---
 
-<PortfolioPageLayout />
+<PortfolioListLayout />
