--- a/src/layouts/PortfolioListLayout.astro
+++ b/src/layouts/PortfolioListLayout.astro
@@ -33,7 +33,7 @@ const schema = {
       title="Mapa patrimonial de la Costa Ártabra"
       summary="Desarrollo de una aplicación completa para el patrimonio cultural y militar de la Costa Ártabra, con un sistema CMS para el personal de la administración y una aplicación web progresiva (PWA) para visualizar el mapa y planificar rutas."
       tags={["dotnet", "react", "mysql", "ubuntu"]}
-      detailsLink="/portfolio/mapa-ferrol"
+      detailsLink="/portfolio/mapa-ferrol/"
       onlineLink="https://mapacostaartabramilitar.com"
     />
 
@@ -41,28 +41,28 @@ const schema = {
       title="Extractor de pedidos venta online"
       summary="Aplicación de escritorio que extrae los datos sobre los pedidos on-line de diversas plataformas (como WooCommerce, Amazon y Ebay)."
       tags={["java", "windows"]}
-      detailsLink="/portfolio/order-extractor"
+      detailsLink="/portfolio/order-extractor/"
     />
 
     <PortfolioProject
       title="Museo a ceo aberto de Ponteareas"
       summary="Desarrollo de visualización de contenido turístico para el Concello de Ponteareas. Incluye contenido en 360º e incrustación de vídeos de YouTube. Realizado en 2021."
       tags={["php", "web"]}
-      detailsLink="/portfolio/qr-ponteareas"
+      detailsLink="/portfolio/qr-ponteareas/"
     />
 
     <PortfolioProject
       title="QR Touro turístico"
       summary="Desarrollo de un generador estático en TypeScript para información turística del Concello de Touro. Realizado en 2020."
       tags={["typescript", "web"]}
-      detailsLink="/portfolio/qr-touro"
+      detailsLink="/portfolio/qr-touro/"
     />
 
     <PortfolioProject
       title="Consultoría WordPress"
       summary="Trabajos de mantenimiento, optimización y migración de sitios web WordPress y tiendas online WooCommerce."
       tags={["php", "wordpress"]}
-      detailsLink="/portfolio/wp-consulting"
+      detailsLink="/portfolio/wp-consulting/"
     />
   </section>
 
@@ -83,7 +83,7 @@ const schema = {
       summary="Aplicación web para la gestión de entrenamientos deportivos, con una interfaz sencilla y fácil de usar. Desarrollado con ASP.NET Core, Razor Pages y SQL Server."
       tags={["dotnet", "azure"]}
       githubLink="https://github.com/arielcostas/mientreno"
-      detailsLink="/portfolio/mientreno"
+      detailsLink="/portfolio/mientreno/"
     />
 
     <PortfolioProject
@@ -91,7 +91,7 @@ const schema = {
       summary="Blog sobre Vigo y su entorno, orientado principalmente a hablar de movilidad y toponimia. Desarrollado en Go, con base de datos MySQL y desplegado sobre VPS administrado por mí mismo."
       tags={["go", "mysql", "ubuntu"]}
       githubLink="https://github.com/arielcostas/vigo360"
-      detailsLink="/portfolio/vigo-360"
+      detailsLink="/portfolio/vigo-360/"
       onlineLink="https://vigo360.es"
     />
   </section>
