--- a/src/layouts/PortfolioSingleLayout.astro
+++ b/src/layouts/PortfolioSingleLayout.astro
@@ -15,7 +15,7 @@ const { Content } = await render(entry);
 ---
 
 <Layout title={data.title} description={data.description}>
-  <a id="link-back" href="/portfolio">
+  <a id="link-back" href="/portfolio/">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
