--- a/src/layouts/BlogSingleLayout.astro
+++ b/src/layouts/BlogSingleLayout.astro
@@ -49,7 +49,7 @@ const schema = {
 };
 ---
 
-<Layout title={entry.data.title} description={entry.data.metaDescription}>
+<Layout title={entry.data.title} description={entry.data.description}>
   <script
     is:inline
     type="application/ld+json"
@@ -78,7 +78,7 @@ const schema = {
   <Content />
 
   <p>
-    <a href="/blog">Volver al blog</a>
+    <a href="/blog/">Volver al blog</a>
   </p>
 </Layout>
 
