Fix font sizes and GH actions

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,6 @@
-$titleFontStack: "Onest Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
-$mainFontStack: "Onest Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
-$monoFontStack: "Fira Code", "Consolas", monospace;
+$titleFontStack: "Roboto Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$mainFontStack: "Roboto Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$monoFontStack: "Roboto Mono Variable", "Fira Code", "Consolas", monospace;
 
 $accent: hsl(209, 94%, 42%);
 $accentLight: hsl(215, 90%, 60%);
