--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -17,8 +17,6 @@ import t from "../i18n/es.json";
 
     <nav class="nav-links" id="nav-links" aria-label="Main navigation">
       <a href="/">{t.header.home}</a>
-      <a href="/trajectory/">{t.header.trajectory}</a>
-      <a href="/portfolio/">{t.header.portfolio}</a>
       <a href="/blog/">{t.header.blog}</a>
       <a href="/contact/">{t.header.contact}</a>
     </nav>
@@ -83,7 +81,8 @@ import t from "../i18n/es.json";
 
       .brand-link {
         font-size: 1.8rem;
-        font-weight: 800;
+        font-weight: 700;
+        font-variation-settings: "wdth" 87.5,"wght" 700,"GRAD" 150;
         text-decoration: none;
         color: $accent;
 
