--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
-$titleFontStack: "Roboto Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
-$mainFontStack: "Roboto Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$titleFontStack: "Roboto Flex", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$mainFontStack: "Roboto Flex", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
 $monoFontStack: "Roboto Mono Variable", "Fira Code", "Consolas", monospace;
 
 $accent: hsl(209, 94%, 42%);
