--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-import "@fontsource-variable/roboto";
-import "@fontsource-variable/roboto-mono";
 import Header from "../partials/Header.astro";
 import Footer from "../partials/Footer.astro";
 
@@ -137,8 +135,19 @@ const { title, description, empty } = Astro.props;
     background-color: color.adjust($accent, $alpha: -0.85);
   }
 
+  ul:has(li) {
+    padding-left: 1.25rem;
+    margin-top: 0;
+    margin-bottom: 1.5rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
   li > time {
-    font-family: $monoFontStack;
+    font-size: 0.95rem;
+    user-select: none;
   }
 
   main {
