--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -1,6 +1,14 @@
 @use "./variables" as *;
 @use "./alert";
 
+@font-face {
+  font-display: swap;
+  font-family: 'Roboto Flex';
+  font-style: normal;
+  font-weight: 100 900;
+  src: url('/fonts/robotoflex.woff2') format('woff2');
+}
+
 body {
   font-family: $mainFontStack;
   line-height: 1.65;
@@ -17,12 +25,14 @@ h1 {
   @extend %heading;
   font-size: 3.25rem;
   line-height: 1.3;
+
 }
 
 h2 {
   @extend %heading;
   font-size: 2.5rem;
   line-height: 1.55;
+  font-variation-settings: "wdth" 87.5,"wght" 700,"GRAD" 150
 }
 
 h3 {
@@ -35,4 +45,8 @@ h4 {
   @extend %heading;
   font-size: 1.25rem;
   line-height: 1.55;
+}
+
+p {
+  font-variation-settings: "GRAD" -15,"wdth" 112.5;
 }
