--- a/src/layouts/BlogListLayout.astro
+++ b/src/layouts/BlogListLayout.astro
@@ -270,6 +270,7 @@ const schema = {
 
   .post-tags {
     display: inline-flex;
+    flex-direction: row;
     list-style: none;
     margin: 0;
     padding: 0;
