--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -171,12 +171,24 @@ const { title, description, empty } = Astro.props;
 
     p.meta {
       display: block;
-      font-size: 0.85rem;
+      font-size: 0.90rem;
       margin-bottom: 1rem;
     }
 
     pre {
       overflow: scroll;
+    }
+
+    blockquote {
+      margin-inline: 2rem;
+      padding-left: 1rem;
+      font-style: italic;
+
+      border-left: 4px solid color.adjust($accent, $lightness: 40%);
+      background-color: color.adjust($background, $lightness: -2%);
+
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
     }
   }
 
