chore: replace Roboto with Archivo Variable font and update styles accordingly

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
-$titleFontStack: "Encode Sans", "Liberation Sans", "Arial", "Helvetica", sans-serif;
-$mainFontStack: "Encode Sans", "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$titleFontStack: "Archivo Variable", "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$mainFontStack: "Archivo Variable", "Liberation Sans", "Arial", "Helvetica", sans-serif;
 $monoFontStack: "Roboto Mono Variable", "Fira Code", "Consolas", monospace;
 
 $accent: hsl(209, 94%, 42%);
