--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '@fontsource-variable/archivo'
 import Header from "../partials/Header.astro";
 import Footer from "../partials/Footer.astro";
 
