--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -163,7 +163,7 @@ const { title, description, empty } = Astro.props;
 
     padding-block-end: 3rem;
 
-    > p > code {
+    p > code {
       word-break: break-word;
       font-family: $monoFontStack;
 
