--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -12,7 +12,7 @@ body {
 %heading {
   font-family: $titleFontStack;
   margin-block-start: 1rem;
-  margin-block-end: 0.5rem;
+  margin-block-end: 1.5rem;
   color: $accentDark;
   text-shadow: 1px 1px 0 #fff;
 }
@@ -21,15 +21,18 @@ h1 {
   @extend %heading;
   font-size: 2.75rem;
   line-height: 1.2;
-  border-bottom: 2px solid $accentLight;
   padding-bottom: 0.5rem;
-  margin-bottom: 1.5rem;
+  border-bottom: 2px solid $accent;
+  letter-spacing: -0.02em;
 }
 
 h2 {
   @extend %heading;
   font-size: 2rem;
-  line-height: 1.3;
+  line-height: 1.2;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid $accent;
+  letter-spacing: -0.02em;
 }
 
 h3 {
